@startuml DominioGame
hide empty members
skinparam classAttributeIconSize 0


class Game {
  +id: UInt
  +version: UInt
}

class Player {
  +currentCharacter: String?
}

class PlayerHand <<typealias>> {
  Map<UInt, Card>
}

interface Card <<sealed>>

class Battle

class Board {
}

class Turn {
  +gameTurn: UInt
  +playerTurn: List<UInt>
}

enum TurnPhase {
  CONSTRUCTION
  SUBSTITUTION
  MOVEMENT
}

class User {
  +id: UInt
}

class Deck<T> <<typealias>> {
  Map<T, UInt>
}

class Spectator


Game *-- "2..*" Player : players
Game *-- "0..*    " Spectator : spectators
Game *-- Board : board
Game *-- Deck : tileDeck
Game *-- Deck : itemDeck
Game *-- Turn : turn
Game *-- "0..1" Battle : battle

Player o-- User : user
Player *-- PlayerHand : hand
PlayerHand *-- "0..*" Card

Turn *-- TurnPhase : phase

Deck *-- "0..*" Tile : copies
Deck *-- "0..* " Item : copies

@enduml
